Repasar funciones lambda y apache spark

--- a/Tema07 - Estructura de datos - Diccionarios.ipynb
+++ b/Tema07 - Estructura de datos - Diccionarios.ipynb
@@ -46,13 +46,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jose': 32, 'Marina': 21}\n"
+      "{'Jose': 33, 'Marina': 21}\n"
      ]
     }
    ],
    "source": [
     "# las claves son Jose y Marina, los valores son 32 y 21\n",
-    "dicc = {\"Jose\": 32, \"Marina\": 21}\n",
+    "dicc = {\"Jose\": 33, \"Marina\": 21}\n",
     "print(dicc)"
    ]
   },
@@ -80,14 +80,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jose': 23, 'Marina': 21}\n"
+      "{'Jose': 24, 'Marina': 21}\n"
      ]
     }
    ],
    "source": [
-    "dicc = {\"Jose\": 32,\n",
+    "dicc = {\"Jose\": 33,\n",
     "        \"Marina\": 21,\n",
-    "        \"Jose\": 23} # nos quedamos con le ultimo valor\n",
+    "        \"Jose\": 24} # nos quedamos con el ultimo valor\n",
     "print(dicc)"
    ]
   },
@@ -1246,7 +1246,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1260,7 +1260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
