--- a/Tema02 - Números en python.ipynb
+++ b/Tema02 - Números en python.ipynb
@@ -17,15 +17,15 @@
    "source": [
     "## Tipos de números\n",
     "Existen estos dos tipos básicos aunque existen otroa más:\n",
-    "- `int`: número entero\n",
-    "- `float`: número en coma flotante\n",
+    "- `int`: número entero, ocupa menos memoria.\n",
+    "- `float`: número en coma flotante.\n",
     "\n",
     "Para saber el tipo de dato de un número podemos utilizar la función `type()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -51,20 +51,19 @@
        "int"
       ]
      },
-     "execution_count": 1,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# vemos el tipo de dato\n",
     "type(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -90,10 +89,8 @@
        "float"
       ]
      },
-     "execution_count": 2,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -112,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -139,10 +136,8 @@
        "float"
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 11,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -152,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -179,14 +174,13 @@
        "float"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# con solo el punto decimal, python lo interpreta como float\n",
     "type(3.)"
    ]
   },
@@ -227,20 +221,19 @@
        "int"
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 13,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# catear: convertir un tipo de dato a otro\n",
     "type(int(7.0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -267,10 +260,8 @@
        "int"
       ]
      },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 14,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -280,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -307,10 +298,8 @@
        "float"
       ]
      },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 15,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -355,14 +344,13 @@
        "3"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 16,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# convertir float a int, redondea hacia abajo o solo extrae la parte entera\n",
     "int(3.5)"
    ]
   },
@@ -503,6 +491,7 @@
     }
    ],
    "source": [
+    "# sumar un entero con un float, el resultado es float\n",
     "2 + 1.0"
    ]
   },
@@ -512,7 +501,7 @@
     "id": "X_F3oJh4UJXf"
    },
    "source": [
-    "**Observación.** Fijémonos que al combinar un número entero (int) y un número en coma flotante (float), el resutado es un número float. Esto ocurre para todas las operaciones aritméticas en `Python`.\n",
+    "**Observación.** Fijémonos que al combinar un número entero (int) y un número en coma flotante (float), el resutado es un número float. Esto ocurre para todas las operaciones aritméticas en `Python`. Con la presencia de un solo número float resultará en un número float.\n",
     "\n"
    ]
   },
@@ -826,6 +815,7 @@
     }
    ],
    "source": [
+    "# a pesar de que todos los numero son enteros, el resultado es float\n",
     "6 / 5"
    ]
   },
@@ -871,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -898,15 +888,33 @@
        "1.2"
       ]
      },
-     "execution_count": 25,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 17,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "6 / 5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/3"
    ]
   },
   {
@@ -985,14 +993,13 @@
        "3"
       ]
      },
-     "execution_count": 26,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 18,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# esta división siempre da un número entero\n",
     "10 // 3"
    ]
   },
@@ -1034,15 +1041,34 @@
        "1"
       ]
      },
-     "execution_count": 27,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 19,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# obtenemos el resto de la división, conocido como módulo\n",
     "10 % 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6 % 5"
    ]
   },
   {
@@ -1058,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1085,10 +1111,8 @@
        "125"
       ]
      },
-     "execution_count": 28,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 20,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1098,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1125,10 +1149,8 @@
        "125.0"
       ]
      },
-     "execution_count": 29,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 21,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1138,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1165,10 +1187,8 @@
        "125.0"
       ]
      },
-     "execution_count": 30,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 22,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1214,20 +1234,19 @@
        "125"
       ]
      },
-     "execution_count": 31,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 23,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# con pow también se puede hacer potencias, pow(5, 3) es lo mismo que 5**3\n",
     "pow(5, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1254,10 +1273,8 @@
        "125.0"
       ]
      },
-     "execution_count": 32,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 24,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1267,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1294,10 +1311,8 @@
        "125.0"
       ]
      },
-     "execution_count": 33,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 25,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1323,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1349,10 +1364,8 @@
        "2.0"
       ]
      },
-     "execution_count": 1,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 26,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1362,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1388,10 +1401,8 @@
        "512.0"
       ]
      },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 27,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1401,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1427,10 +1438,8 @@
        "8.0"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 28,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1468,6 +1477,8 @@
    "source": [
     "### Definiciones\n",
     "\n",
+    "a es la parte real y b la parte imaginaria\n",
+    "\n",
     "- **Número complejo.** Es un par ordenado de números reales $z = (a, b)$, con $a,b\\in\\mathbb{R}$.\n",
     "- **Parte real.** Es el primer elemento del par ordenado, $\\text{Re}(z) = a$.\n",
     "- **Parte imaginaria.** Es el segundo elemento del par ordenado, $\\text{Im}(z) = b$.\n",
@@ -1501,12 +1512,15 @@
    "source": [
     "### Conjugado, Módulo y Argumento\n",
     "\n",
+    "La parte imaginaria es el eje Y y la parte entere el eje X.\n",
+    "\n",
     "Dado un complejo $z = (a,b)$,\n",
     "\n",
     "- **Conjugado.** $\\bar{z} = (a, -b)$.\n",
     "- **Módulo.** $\\text{Mod}(z) = |z| = \\sqrt{\\text{Re}(z)^2 + \\text{Im}(z)^2} = \\sqrt{a^2 + b^2}$.\n",
     "- **Argumento.** $\\text{Arg}(z) = \\arctan\\left(\\frac{\\text{Im}(z)}{\\text{Re}(z)}\\right) = \\arctan\\left(\\frac{b}{a}\\right)$\n",
-    "\n"
+    "\n",
+    "<img alt=\"OpenWebDocs Logo: Carle el ratón de biblioteca\" src=\"https://www.problemasyecuaciones.com/complejos/img1/G1.png\" />"
    ]
   },
   {
@@ -1553,7 +1567,7 @@
     "\n",
     "### Números complejos en `Python`\n",
     "\n",
-    "**Observación.** En `Python`, los números complejos se definen en forma binómica y en vez de utilizar una `i`, se utiliza la letra `j` para representar la unidad imaginaria.\n",
+    "**Observación.** En `Python`, los números complejos se definen en forma **binómica** y en vez de utilizar una `i`, se utiliza la letra `j` para representar la unidad imaginaria.\n",
     "\n"
    ]
   },
@@ -1585,21 +1599,22 @@
        "(2+5j)"
       ]
      },
-     "execution_count": 2,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 29,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 2 es la parte real y 5j es la parte imaginaria\n",
+    "# j es la unidad imaginaria en python\n",
+    "# en matemáticas se usa i, pero en ingeniería eléctrica se usa j\n",
     "z = 2 + 5j\n",
     "z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1625,10 +1640,8 @@
        "complex"
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 30,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1647,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1673,10 +1686,8 @@
        "(1-7j)"
       ]
      },
-     "execution_count": 10,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 31,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1687,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1713,10 +1724,8 @@
        "complex"
       ]
      },
-     "execution_count": 11,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 32,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1735,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1761,10 +1770,8 @@
        "1.0"
       ]
      },
-     "execution_count": 12,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 33,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1783,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1809,10 +1816,8 @@
        "-7.0"
       ]
      },
-     "execution_count": 13,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 34,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1831,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1857,10 +1862,8 @@
        "(7-2j)"
       ]
      },
-     "execution_count": 14,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 35,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1882,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1908,10 +1911,8 @@
        "(-3-10j)"
       ]
      },
-     "execution_count": 15,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 36,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1957,20 +1958,19 @@
        "(-2+6j)"
       ]
      },
-     "execution_count": 48,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 37,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# podemos multiplicar entero con complejos\n",
     "-1 * z1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1997,10 +1997,8 @@
        "(34-22j)"
       ]
      },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 38,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2045,10 +2043,8 @@
        "-1j"
       ]
      },
-     "execution_count": 16,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 39,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2056,7 +2052,8 @@
     "z1 = -1 - 1j\n",
     "z2 = 1 - 1j\n",
     "\n",
-    "z1 / z2"
+    "z1 / z2\n",
+    "# debemos colocar 1j, no puede existir solo el j ya que python lo interpreta como una variable no definida"
    ]
   },
   {
@@ -2098,10 +2095,8 @@
        "(-2-1j)"
       ]
      },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 40,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2121,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2147,10 +2142,8 @@
        "2.0"
       ]
      },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 41,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2196,15 +2189,14 @@
        "-1.5707963267948966"
       ]
      },
-     "execution_count": 20,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 42,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import cmath\n",
+    "# la función phase nos da el ángulo en radianes que forma el número complejo con el eje real\n",
     "cmath.phase(z)"
    ]
   },
@@ -2219,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2246,10 +2238,8 @@
        "(-0-2j)"
       ]
      },
-     "execution_count": 57,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 43,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2285,14 +2275,13 @@
        "(2.0, -1.5707963267948966)"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 44,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# la función polar nos da la representación polar del número complejo\n",
     "cmath.polar(z)"
    ]
   },
@@ -2334,15 +2323,17 @@
        "(1.2246467991473532e-16-2j)"
       ]
      },
-     "execution_count": 56,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 45,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cmath.rect(abs(z), cmath.phase(z))"
+    "# la función rect nos da la representación rectangular del número complejo a partir de su módulo y ángulo\n",
+    "# abs retorna el módulo del número complejo (el valor absoluto)\n",
+    "cmath.rect(abs(z), cmath.phase(z))\n",
+    "\n",
+    "# e elevado a la -16, esto es un número muy pequeño cercano a cero"
    ]
   }
  ],
@@ -2356,7 +2347,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2370,7 +2361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
