--- a/Tema07 - Estructura de datos - Diccionarios.ipynb
+++ b/Tema07 - Estructura de datos - Diccionarios.ipynb
@@ -533,6 +533,36 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "Vamos a hacer que el usuario rellene una ficha del cliente y vamos a guardar toda la información en un diccionario. Para ello, vamos a pedir el nombre, los apellidos, la edad, el dni y el dinero total que va a pagar el cliente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = {}\n",
+    "print(\"Introduzca el nombre del cliente: \")\n",
+    "client[\"name\"] = str(input())\n",
+    "print(\"Introduzca los apellidos del cliente: \")\n",
+    "client[\"surname\"] = str(input())\n",
+    "print(\"Introduzca la edad del cliente: \")\n",
+    "client[\"age\"] = int(input())\n",
+    "print(\"Introduzca el DNI del cliente: \")\n",
+    "client[\"dni\"] = str(input())\n",
+    "print(\"Introduzca el total a pagar del cliente: \")\n",
+    "client[\"total\"] = float(input())\n",
+    "\n",
+    "print(client)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "LjZ5hprxg0MY"
    },
@@ -771,6 +801,39 @@
     "\n",
     "for item in lista: # imprimimos los diccionarios\n",
     "  print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "Tenemos un diccionario con 5 claves: `Math`, `English`, `History`, `Science`, `IT`. Cada clave contiene una lista de tamaño 3, donde cada una de esas entradas se corresponde con una nota de 0 a 10. El usuario va a ser quien introduzca esas notas por teclado. Finalmente, para cada clave, mostraremos la media de las 3 notas.\n",
+    "\n",
+    "PISTA: Necesitarás la función `sum()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects = {\"Math\": [],\n",
+    "            \"English\": [],\n",
+    "            \"History\": [],\n",
+    "            \"Science\": [],\n",
+    "            \"IT\": []}\n",
+    "\n",
+    "for key in subjects:\n",
+    "  print(\"===\", key, \"===\")\n",
+    "  for i in range(1, 4):\n",
+    "    subjects[key].append(int(input(\"Nota trimestre {} \".format(i))))\n",
+    "\n",
+    "print(\"\\n Medias por asignatura:\")\n",
+    "for key, val in subjects.items():\n",
+    "  print(key, \":\", sum(val)/len(val))"
    ]
   },
   {
@@ -1118,6 +1181,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "Dado un diccionario, vamos a solicitar al usuario una clave que quiera eliminar y vamos a eliminarla. Al final, le mostraremos el diccionario actualizado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc = {\"a\": 1, \"e\": 2, \"i\": 3, \"o\": 4, \"u\": 5}\n",
+    "print(\"Este es el diccionario original:\", dicc)\n",
+    "\n",
+    "key = input(\"\\nIntroduce la clave que quieras eliminar del diccionario: \")\n",
+    "\n",
+    "dicc.pop(key)\n",
+    "print(\"\\nEste es el diccionario actualizado\", dicc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "C3dWk8F7pz-v"
    },
@@ -1235,6 +1322,69 @@
    "source": [
     "dicc3 = dict({\"x\": 0}, y = 1, z = -1) # podemos combinar ambos, asignar valores y pasar diccionarios\n",
     "print(dicc3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "Vamos a solicitar al usuario 8 números enteros del 0 al 9. Se supone que son los números de su DNI, que guardaremos cada uno en una entrada de una lista. A continuación, con esos números [calcularemos la letra correspondiente](https://www.serautonomo.net/como-calcular-la-letra-del-dni.html) y la guardaremos en una variable. Finalmente, crearemos un diccionario con dos claves, cada una guardará, respectivamente, los números y la letra del DNI. Finalmente, mostraremos el diccionario resultante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Introduce los números del DNI uno por uno:\")\n",
+    "nums = []\n",
+    "for _ in range(8):\n",
+    "  nums.append(int(input()))\n",
+    "\n",
+    "dni = 0\n",
+    "for i in range(len(nums)):\n",
+    "  dni += 10 ** (len(nums) - i - 1) * nums[i]\n",
+    "\n",
+    "letters = {0: \"T\", 1: \"R\", 2: \"W\", 3: \"A\", 4: \"G\", 5: \"M\", 6: \"Y\",\n",
+    "          7: \"F\", 8: \"P\", 9: \"D\", 10: \"X\", 11: \"B\", 12: \"N\", 13: \"J\",\n",
+    "          14: \"Z\", 15: \"S\", 16: \"Q\", 17: \"V\", 18: \"H\", 19: \"L\", 20: \"C\",\n",
+    "          21: \"K\", 22: \"E\"}\n",
+    "\n",
+    "letter = letters[dni % 23]\n",
+    "\n",
+    "DNI = {\"numbers\": nums, \"letter\": letter}\n",
+    "print(DNI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "Vamos a leer un string por teclado y vamos a devolver un diccionario con la cantidad de apariciones de cada caracter en el string proporcionado por el usuario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = input(\"Introduce una frase: \")\n",
+    "counted = []\n",
+    "letters = {}\n",
+    "\n",
+    "s = s.lower()\n",
+    "for c in s:\n",
+    "  if c not in counted and c != \" \":\n",
+    "    counted.append(c)\n",
+    "    letters[c.upper()] = s.count(c)\n",
+    "\n",
+    "print(letters)"
    ]
   }
  ],
