--- a/Tema11 - Funciones Lambda.ipynb
+++ b/Tema11 - Funciones Lambda.ipynb
@@ -329,6 +329,25 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Ejercicio\n",
+        "\n",
+        "Dada una lista numérica, vamos a filtrarla y quedarnos con los números positivos. El resultado lo mostraremos en una lista."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nums = [-5, -3, 5, 2, 1, 3, -2, -9, 0.4, -0.01]\n",
+        "list(filter(lambda x: x > 0, nums))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "CyI_nHtLw2Qk"
       },
@@ -485,6 +504,54 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Ejercicio\n",
+        "\n",
+        "Dada una lista de palabras, vamos a quedarnos con la palabra con más \"a\"."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "def total_a(w):\n",
+        "  \"\"\"\n",
+        "  Devuelve el total de apariciones de la letra a\n",
+        "  Args:\n",
+        "    w: Palabra en formato string\n",
+        "  Returns:\n",
+        "    a: Número entero\n",
+        "  \"\"\"\n",
+        "  a = 0\n",
+        "  for c in w.lower():\n",
+        "    if c == \"a\":\n",
+        "      a += 1\n",
+        "  return a\n",
+        "\n",
+        "def more_a(w1, w2):\n",
+        "  \"\"\"\n",
+        "  Devuelve la palabra con mayor número de a\n",
+        "  Args:\n",
+        "    w1: Palabra en formato string\n",
+        "    w2: Palabra en formato string\n",
+        "  Returns:\n",
+        "    Palabra en formato string\n",
+        "  \"\"\"\n",
+        "  if total_a(w1) >= total_a(w2):\n",
+        "    return w1\n",
+        "  return w2\n",
+        "\n",
+        "words = [\"zapato\", \"amigo\", \"cosa\", \"amargada\", \"césped\"]\n",
+        "reduce(lambda w1, w2: more_a(w1,w2), words)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "c0kYiYJ0x0lH"
       },
@@ -559,6 +626,36 @@
       ],
       "source": [
         "list(map(len, words))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Ejercicio\n",
+        "\n",
+        "Vamos a convertir una lista de grados Celsius a grados Fahrenheit. El resultado lo mostraremos como una lista."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def from_C_to_F(celsius):\n",
+        "  \"\"\"\n",
+        "  Convierte grados celsius en Fahrenheit\n",
+        "  Args:\n",
+        "    celsius: Número real\n",
+        "  Returns:\n",
+        "    fahrenheit: Número real\n",
+        "  \"\"\"\n",
+        "  fahrenheit = (celsius * 9 / 5) + 32\n",
+        "  return fahrenheit\n",
+        "\n",
+        "celsius = [0, 5, 10, 15, 20, 25, 50, 100, 200]\n",
+        "list(map(from_C_to_F, celsius))"
       ]
     },
     {
@@ -705,13 +802,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Ejercicio\n",
+        "\n",
+        "Vamos a ordenar una lista de palabras por el número de apariciones de la letra indicada por el usuario. El orden será descendente."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "ryZ2TW6cKVBU"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def total_letter(w, l):\n",
+        "  \"\"\"\n",
+        "  Devuelve el total de apariciones de la letra indicada por parámetro en la palabra w\n",
+        "  Args:\n",
+        "    w: Palabra en formato string\n",
+        "    l: Letra en formato string\n",
+        "  Returns:\n",
+        "    letter: Número entero\n",
+        "  \"\"\"\n",
+        "  letter = 0\n",
+        "  for c in w.lower():\n",
+        "    if c == l.lower():\n",
+        "      letter += 1\n",
+        "  return letter\n",
+        "\n",
+        "l = input(\"Introduce una letra: \")\n",
+        "words = [\"tutu\", \"jugueteria\", \"violonchelo\", \"fanfarron\", \"piano\", \"murcielago\"]\n",
+        "sorted(words, key = lambda w: total_letter(w, l), reverse = True)"
+      ]
     }
   ],
   "metadata": {
